--- a/pkg/admin/gui/front-end/html/header.html
+++ b/pkg/admin/gui/front-end/html/header.html
@@ -10,7 +10,7 @@
       </a>
       <ul class="nav nav-pills ms-auto me-5">
         <li class="nav-item"><a href="home" class="nav-link text-white d-flex align-items-center"><i class="bi bi-person-fill fs-6 me-2"></i>{{ index .tab "userlogin" }} - {{ index .username }}</a></li>
-        <li class="nav-item"><a href="home" class="nav-link text-white">{{ index .tab "about" }}</a></li>
+        <li class="nav-item"><a href="#" id="aboutButton" class="nav-link text-white" data-bs-toggle="modal" data-bs-target="#aboutModal">{{ index .tab "about" }}</a></li>
         <li class="nav-item"><a href="logout" class="nav-link text-white">{{ index .tab "logout" }}</a></li>
       </ul>
       <div class="d-flex align-items-center">
@@ -25,6 +25,55 @@
           {{ if .hasServerID }}<input type="hidden" name="serverID" value="{{ .server.ID }}">{{ end }}
           {{ if .hasRuleID }}<input type="hidden" name="ruleID" value="{{ .rule.ID }}">{{ end }}
         </form>
+      </div>
+      <div class="modal fade" id="aboutModal" tabindex="-1" aria-labelledby="aboutModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content p-3 border rounded bg-light">
+            <div class="modal-header">
+              <h5 class="modal-title" id="aboutModalLabel">Waarp Gateway</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <div class="flex-label-input mb-2">
+                <label class="col-form-label label-light-bold me-3">Version :</label>
+                <input type="text" class="form-control-plaintext input-auto-width" value="?" readonly>
+              </div>
+              <hr style="border-top: 1px solid #ababab;">
+              <div class="flex-label-input mb-2">
+                <label class="col-form-label label-light-bold me-3">Date :</label>
+                <input type="text" class="form-control-plaintext input-auto-width" value="?" readonly>
+              </div>
+              <hr style="border-top: 1px solid #ababab;">
+              <div class="flex-label-input mb-2">
+                <label class="col-form-label label-light-bold me-3">{{ index .tab "revision" }} :</label>
+                <input type="text" class="form-control-plaintext input-auto-width" value="?" readonly>
+              </div>
+              <hr style="border-top: 1px solid #ababab;">
+              <div class="flex-label-input mb-2">
+                <label class="col-form-label label-light-bold me-3">Support :</label>
+                <p class="mt-3"><a href="https://www.waarp.fr" target="_blank" rel="noopener">Waarp</a> {{ index .tab "descriptionSupport" }} <strong>Waarp Gateway</strong>.</p>
+              </div>
+              <hr style="border-top: 1px solid #ababab;">
+              <div class="flex-label-input mb-2">
+                <label class="col-form-label label-light-bold me-3">{{ index .tab "license" }} :</label>
+                <p class="mt-3">{{ index .tab "descriptionLicense" }}</p>
+              </div>
+              <hr style="border-top: 1px solid #ababab;">
+              <div class="flex-label-input mb-2">
+                <label class="col-form-label label-light-bold me-3">{{ index .tab "links" }} :</label>
+                <ul class="mb-0">
+                  <li><strong>{{ index .tab "download" }}</strong>: <a href="https://dl.waarp.org/dist/waarp-gateway/" target="_blank" rel="noopener">dl.waarp.org</a></li>
+                  <li><strong>Documentation</strong>: <a href="https://doc.waarp.org/waarp-gateway/latest" target="_blank" rel="noopener">doc.waarp.org</a></li>
+                  <li><strong>Forums</strong>: <a href="https://discuss.waarp.org/" target="_blank" rel="noopener">discuss.waarp.org</a></li>
+                  <li><strong>Contact</strong>: <a href="mailto:info@waarp.fr">info@waarp.fr</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{{ index .tab "close" }}</button>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </header>
