fix/ redirect router and state error client/server

--- a/pkg/admin/gui/front-end/html/local_client_management_page.html
+++ b/pkg/admin/gui/front-end/html/local_client_management_page.html
@@ -331,7 +331,7 @@
                     <button type="submit" class="btn btn-outline-secondary btn-sm me-1" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="{{ index $.tab "pause" }}">
                       <i class="bi bi-pause"></i>
                     </button>
-                  {{ else if eq (index $state 0) "Offline" }}
+                  {{ else if or (eq (index $state 0) "Offline") (eq (index $state 0) "Error") }}
                     <button type="submit" class="btn btn-outline-success btn-sm me-1" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="{{ index $.tab "resume" }}">
                       <i class="bi bi-play"></i>
                     </button>
