--- a/pkg/admin/gui/front-end/html/local_account_authentication_page.html
+++ b/pkg/admin/gui/front-end/html/local_account_authentication_page.html
@@ -161,7 +161,7 @@
                         {{ if eq (displayOrDefault .Value (index $.tab "undefined")) (index $.tab "undefined") }}
                             <span class="input-undefined">{{ displayOrDefault .Value (index $.tab "undefined") }}</span>
                         {{ else }}
-                            {{ .Value }}
+                            <span style="white-space: pre-wrap;">{{ .Value }}</span>
                         {{ end }}
                       </div>
                     </div>
