--- a/pkg/admin/gui/front-end/html/server_authentication_page.html
+++ b/pkg/admin/gui/front-end/html/server_authentication_page.html
@@ -157,7 +157,7 @@
                                         {{ if eq (displayOrDefault .Value (index $.tab "undefined")) (index $.tab "undefined") }}
                                             <span class="input-undefined">{{ displayOrDefault .Value (index $.tab "undefined") }}</span>
                                         {{ else }}
-                                            {{ .Value }}
+                                            <span style="white-space: pre-wrap;">{{ .Value }}</span>
                                         {{ end }}
                                     </div>
                                 </div>
@@ -177,7 +177,7 @@
                                         {{ if eq (displayOrDefault .Value2 (index $.tab "undefined")) (index $.tab "undefined") }}
                                             <span class="input-undefined">{{ displayOrDefault .Value2 (index $.tab "undefined") }}</span>
                                         {{ else }}
-                                            {{ .Value2 }}
+                                            <span style="white-space: pre-wrap;">{{ .Value2 }}</span>
                                         {{ end }}
                                     </div>
                                 </div>
