--- a/pkg/admin/gui/front-end/html/local_client_management_page.html
+++ b/pkg/admin/gui/front-end/html/local_client_management_page.html
@@ -46,6 +46,13 @@
                 <input type="text" name="addLocalClientName" class="form-control" required value="{{ index $.modalElement "addLocalClientName" }}">
                 </div>
                 <hr style="border-top: 1px solid #ababab;">
+                <div class="form-input mt-2 d-flex align-items-center">
+                    <label class="col-form-label me-3">{{ index .tab "noAutoStart" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipNoAutoStart" }}"></i> :</label>
+                    <div class="form-check-inline">
+                        <input class="form-check-input" type="checkbox" name="addNoAutoStart" value="true">
+                    </div>
+                </div>
+                <hr style="border-top: 1px solid #ababab;">
 
                 <div class="form-input">
                 <label class="col-form-label">{{ index .tab "protocol" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocol" }}"></i> :</label>
@@ -352,10 +359,18 @@
                         </div>
                         <div class="modal-body">
                             <div class="form-input">
-                            <label class="col-form-label">{{ index $.tab "localClientStr" }} :</label>
-                            <input type="text" name="editLocalClientName" class="form-control" required value="{{ if $me }}{{ index $me "editLocalClientName" }}{{ else }}{{ .Name }}{{ end }}">
+                                <label class="col-form-label">{{ index $.tab "localClientStr" }} :</label>
+                                <input type="text" name="editLocalClientName" class="form-control" required value="{{ if $me }}{{ index $me "editLocalClientName" }}{{ else }}{{ .Name }}{{ end }}">
                             </div>
                             <hr style="border-top: 1px solid #ababab;">
+                            <div class="form-input mt-2 d-flex align-items-center">
+                                <label class="col-form-label me-3">{{ index $.tab "noAutoStart" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipNoAutoStart" }}"></i> :</label>
+                                <div class="form-check-inline">
+                                    <input class="form-check-input" type="checkbox" name="editNoAutoStart" value="true" {{ if .Disabled }}checked{{ end }}>
+                                </div>
+                            </div>
+                            <hr style="border-top: 1px solid #ababab;">
+
                             <div class="form-input mt-4">
                             <label class="col-form-label">{{ index $.tab "protocol" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocol" }}"></i> :</label>
                             <select name="editLocalClientProtocol" class="form-select protocolConfiguration-select" required>
