--- a/pkg/admin/gui/front-end/html/server_management_page.html
+++ b/pkg/admin/gui/front-end/html/server_management_page.html
@@ -45,7 +45,13 @@
                   <label class="col-form-label">{{ index .tab "servers" }} :</label>
                   <input type="text" name="addServerName" class="form-control" required value="{{ index .modalElement "addServerName" }}">
                 </div>
-
+                <hr style="border-top: 1px solid #ababab;">
+                <div class="form-input mt-2 d-flex align-items-center">
+                    <label class="col-form-label me-3">{{ index .tab "noAutoStart" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipNoAutoStart" }}"></i> :</label>
+                    <div class="form-check-inline">
+                        <input class="form-check-input" type="checkbox" name="addNoAutoStart" value="true">
+                    </div>
+                </div>
                 <hr style="border-top: 1px solid #ababab;">
                 <div class="form-input">
                 <label class="col-form-label">{{ index .tab "protocol" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocol" }}"></i> :</label>
@@ -369,6 +375,13 @@
                             <div class="form-input">
                               <label class="col-form-label">{{ index $.tab "servers" }} :</label>
                               <input type="text" name="editServerName" class="form-control" required value="{{ if $me }}{{ index $me "editServerName" }}{{ else }}{{ .Name }}{{ end }}">
+                            </div>
+                            <hr style="border-top: 1px solid #ababab;">
+                            <div class="form-input mt-2 d-flex align-items-center">
+                                <label class="col-form-label me-3">{{ index $.tab "noAutoStart" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipNoAutoStart" }}"></i> :</label>
+                                <div class="form-check-inline">
+                                    <input class="form-check-input" type="checkbox" name="editNoAutoStart" value="true" {{ if .Disabled }}checked{{ end }}>
+                                </div>
                             </div>
                             <hr style="border-top: 1px solid #ababab;">
                             <div class="form-input mt-4">
