fix: Fixed protocol display names in servers, clients & partners lists

--- a/pkg/admin/gui/front-end/html/local_client_management_page.html
+++ b/pkg/admin/gui/front-end/html/local_client_management_page.html
@@ -251,7 +251,7 @@
                 {{ end }}
               </span>
             </td>
-            <td>{{ .Protocol }}</td>
+            <td>{{ protocolDisplayName .Protocol }}</td>
             <td>{{ .LocalAddress.Host }}</td>
             <td>{{ .LocalAddress.Port }}</td>
             <td>
