--- a/pkg/admin/gui/front-end/html/partner_management_page.html
+++ b/pkg/admin/gui/front-end/html/partner_management_page.html
@@ -204,7 +204,7 @@
               <td><i class="bi bi-person-fill"></i></td>
               <td><strong>{{ .Name }}</strong></td>
 
-              <td>{{ .Protocol }}</td>
+              <td>{{ protocolDisplayName .Protocol }}</td>
               <td>{{ .Address.Host }}</td>
               <td>{{ .Address.Port }}</td>
               <td>
