--- a/pkg/admin/gui/front-end/html/server_management_page.html
+++ b/pkg/admin/gui/front-end/html/server_management_page.html
@@ -252,7 +252,7 @@
                 {{ end }}
               </span>
             </td>
-            <td>{{ .Protocol }}</td>
+            <td>{{ protocolDisplayName .Protocol }}</td>
             <td>{{ .Address.Host }}</td>
             <td>{{ .Address.Port }}</td>
             <td>
